fix: finally fix canvas not responsive bug there was a bug where canvas elment was not adjusting according to parents width. I fixed it by following a thread on github, which basically directly styles the canvas element width by putting an !important. it worked.

--- a/src/App.css
+++ b/src/App.css
@@ -49,10 +49,14 @@
 
 .scroll-none::-webkit-scrollbar {
     width: 10px;
-
+    height: 7px;
 }
 
 .scroll-none::-webkit-scrollbar-thumb {
-    background: #555050;
+    background: #8c8b8b;
     border-radius: 2em;
+}
+
+canvas {
+    width: 100% !important;
 }
